--- a/style.css
+++ b/style.css
@@ -46,4 +46,21 @@
 	transform: translate(-50%);
 	bottom: initial !important;
 }
-/
+.services
+{
+	margin-top:40px;
+}
+.icon
+{
+	font-size:40px;
+	margin:20px auto;
+	padding:20px;
+	border:1 px solid #fff;
+	border radius:50%;
+}
+#services p
+{
+	font-size:14px;
+	margin-top:20px;
+	color:#ccc;
+}
