--- a/style.css
+++ b/style.css
@@ -117,4 +117,26 @@ position: relative;
 	color:#ccc;
 }
 
+.img-box ul, .img-box ul li
+{
+	transition:0.5s;
 
+}
+
+/*--------promo-----*/
+#promo
+{
+	background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(images/promo.jpg);
+	background-size: cover;
+	background-position:center;
+	color:#E6E6FA;
+	background-attachment:fixed;
+	text-align:center;
+	padding: 100px;
+	font-family:sans-serif;
+	font-size:35px;
+}
+.promo  p
+{
+	background-image: #E6E6FA;
+}
